Correcao de erros: Agora os cookies podem salvar mais de uma noticia. Agora o sistema trata diferentes usuarios como diferentes sessoes, antes todo mundo recebia as mesmas noticias Codigo refatorado buscando seguir os principios S.O.L.I.D