@@ -6,11 +6,17 @@ import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.events.Characters;
 import javax.xml.stream.events.XMLEvent;
 
-import java.io.InputStream;
-import java.net.URI;
-import java.util.ArrayList;
+import org.springframework.stereotype.Component;
 
-public class XmlParser {
+import java.io.InputStream;
+import java.net.URL;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.HashMap;
+
+@Component
+public class XmlParser extends ParserCreator {
     static final String TITLE = "title";
     static final String DESCRIPTION = "description";
     static final String LINK = "link";
@@ -21,21 +27,21 @@ public class XmlParser {
     private XMLInputFactory inputFactory;
     private XMLEventReader eventReader;
     private InputStream in;
-    private static ArrayList<Noticia> noticias = new ArrayList<>();
-    
-    public XmlParser (URI link) throws Exception {
+    private List<String[]> noticias;
+
+    @Override
+    public void lerArquivo(String arquivo) throws Exception {
         inputFactory = XMLInputFactory.newInstance();
-        in = link.toURL().openStream();
+        URL link = new URL(arquivo);
+        in = link.openStream();
         eventReader = inputFactory.createXMLEventReader(in);
-        parseSite();
-    }
-
-    public ArrayList<Noticia> getNoticias() {
-        return noticias;
-    }
-
-    public XmlParser() {
         noticias = new ArrayList<>();
+        parseSite(); 
+    }
+
+    @Override
+    public List<String[]> retornarResultados() {
+        return noticias;
     }
 
     private String getDadosDoEvento(XMLEvent event, XMLEventReader eventReader) throws XMLStreamException {
@@ -47,58 +53,43 @@ public class XmlParser {
         return retorno;
     }
 
+    private void limparMapa(Map<String, String> mapa){
+        mapa.put(TITLE, null);
+        mapa.put(DESCRIPTION, null);
+        mapa.put(PUB_DATE, null);
+        mapa.put(LINK, null);
+        mapa.put(IMAGEM, null);
+
+    }
+
     private void parseSite() throws XMLStreamException {
-        Noticia noticia = null;
-        
-        String manchete ="", subtitulo="", data="", link = null, imagem = null;
-        
+
+        Map <String, String> prototipoItemConteudo = new HashMap<>(); //A ideia é um código mais limpo
+        //Sei que não é o padrão prototype, mas acredito que a ideia foi bem inspirada nele e graças a isso
+        //substitui um monte de if e else 
+        limparMapa(prototipoItemConteudo);
         while (eventReader.hasNext()) {
             XMLEvent event = eventReader.nextEvent();
             if (event.isStartElement()) {
-                
                 String elemento = event.asStartElement().getName().getLocalPart();
+
+                if (elemento.equals(ITEM))
+                    event = eventReader.nextEvent();
+                else
+                    prototipoItemConteudo.put(elemento, getDadosDoEvento(event, eventReader));    
+            }
+            else if (event.isEndElement() && event.asEndElement().getName().getLocalPart() == (ITEM)) {
                 
-                switch(elemento) {
-                    case ITEM:
-                        event = eventReader.nextEvent();
-                        break;
-                    
-                    case TITLE:
-                        manchete = getDadosDoEvento(event, eventReader);
-                        break;
-                    
-                    case DESCRIPTION:
-                        subtitulo = getDadosDoEvento(event, eventReader);
-                        break;
-
-                    case LINK:
-                        link = getDadosDoEvento(event, eventReader);
-                        break;
-                    
-                    case IMAGEM:
-                        imagem = getDadosDoEvento(event, eventReader);
-                        break;
-                    
-                    case PUB_DATE:
-                        data = getDadosDoEvento(event, eventReader);
-                        break;
-                    
-                    default:
-                        break;
-                        
-                }
-            } else if (event.isEndElement() && event.asEndElement().getName().getLocalPart() == (ITEM)) {
-                noticia = new Noticia(manchete, subtitulo, data, link, imagem);
+                String[] noticia = {
+                    prototipoItemConteudo.get(TITLE), 
+                    prototipoItemConteudo.get(DESCRIPTION),
+                    prototipoItemConteudo.get(PUB_DATE), 
+                    prototipoItemConteudo.get(LINK), 
+                    prototipoItemConteudo.get(IMAGEM)
+                };
                 noticias.add(noticia);
-
-                manchete = "";
-                subtitulo = "";
-                data = "";
-                link = null;
-                imagem = null;
-
+                limparMapa(prototipoItemConteudo);
             }
         }
     }
-
 }
